Added Javadoc comments, refactored to make safer and more clear.